<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"

            android:title="@string/menu_history">

            <menu>

                <item
                    android:id="@+id/subItem1"
                    android:title="@string/founding"/>

                <item
                    android:id="@+id/subItem2"
                    android:title="@string/quarters"/>

                <item
                    android:id="@+id/subItem3"
                    android:title="@string/chiefs"/>

            </menu>
        </item>
        <!--android:icon="@drawable/home"-->

        <item
            android:id="@+id/nav_learn"
            android:title="@string/menu_learn" />
            <!--android:icon="@drawable/person"-->

        <item
            android:id="@+id/nav_folklore"
            android:title="@string/menu_folklore" />
            <!--android:icon="@drawable/settings"-->

        <item
            android:id="@+id/nav_ads"
            android:title="@string/menu_ads" />
            <!--android:icon="@drawable/settings"-->

    </group>

</menu>